# gcp-raniamoh

./: README.md
agentic-ai/retail-demo/logistics_agent/: Dockerfile  README.md  __main__.py  agent.py  agent_card.json  agent_executor.py  pyproject.toml
agentic-ai/retail-demo/order_mgmt_api/: README.md  dockerfile  main.py  (+2 more)
cf/log_cost_control/: main.py
cf/reset-logging-filters/: requirements.txt
samples/cloudrun-gcs-fuse/: Dockerfile  README.md  gcsfuse_run.sh  pom.xml  run.sh
samples/pop-kustomize/: cloudbuild-hybrid.yaml  cloudbuild.yaml  pipeline-hybrid.yaml  skaffold-hybrid.yaml  skaffold.yaml
samples/workload-identity/: Readme.md  wi-test.yaml
solutions/autopilot-spot-regular-lb/: README.md  deployment-1.yaml  deployment-2.yaml  ingress-cluster.yaml  ingress-nodeport.yaml  ingress.yaml  service-1.yaml  service-2.yaml  service-cluster.yaml  service-nodeport.yaml  service.yaml
solutions/doc-splitter/: README.md  doc-splitter.ipynb  requirements.txt
solutions/gen-ai-notebooks/: prompt-tuning.ipynb
solutions/gke-app-discovery/: Readme.md
solutions/google-chat-bot-notification-channel/: Readme.md  main.py  requirements.txt
solutions/multi-cluster gateway with custom error pages/: README.md  script.sh
solutions/multi-tenant-krm/: Readme.md  kcc.yaml
solutions/service-accounts-audit/: README.md  sa-audit-workflow.yaml  sa-insight-workflow.yaml
solutions/telemetricdata-eda/: .gitignore  Channel-Trigger.sh  README.md  batck-processing-telemetricdata.yaml  build.gradle  pom.xml  settings.gradle  telemetric-data-processing.yaml  vm-startup.sh
(+90 files in other folders)
